styled html page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,72 @@
 </head>
 
 <body>
-    <h1>Christopher Francis</h1>
+ <!-- Header section with navigation and name -->
+ <header>
+  <h1>Christopher</h1>
+  <nav>
+    <!-- Unordered list of navigation items -->
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<!-- Main section -->
+ <main>
+   <article>
+     <div class="wrapper">
+       <!-- Image profile-->
+       <img src="./images/profile.jpg" 
+           alt="myprofile" class="center">
+     <h2>Hello, I'm Christopher Francis</h2>
+     <p>I work as a Web Developer based in San Antonio, Texas.</p>
+     <p>I'm enthusiastic about coding and deeply interested in</p>
+      <ul>
+        <li>Collaborating with proficient developers</li>
+        <li>Refining my skills and guiding fellow developers</li>
+        <li>Crafting refined code</li>
+        <li>Staying updated with the latest technologies</li>
+      </ul>
+     </div>
+   </article>
+<hr>
+<!--About me section -->
+   <article id="about">
+     <div class="wrapper">
+     <h2>About Christopher</h2>
+     <p>I'm an avid web developer who takes pleasure in crafting interactive, user-friendly websites.</p>
+        <p>I thrive in team environments and relish the opportunity to contribute to collaborative projects. I'm always eager to acquire new proficiencies and technologies.</p>
+        <p>My journey in web development commenced during my college years, where I embarked on my first courses in HTML and CSS. </p>
+        <p>Since then, I've been on a continuous journey of learning and honing my web development skills, </p> 
+        <p>in addition to exploring areas such as UX design and project management.</p>
+        <p>When I'm not engrossed in web development, you can find me hiking or strumming on my guitar.</p>
+     </div>
+   </article>
+<hr>
+<!-- Contact section with links to LinkedIn, GitHub, and email -->
+   <article id="contact">
+     <div class="wrapper">
+       <h2>Contact Christopher</h2>
+       <p>I'd be delighted to connect with you! Please don't hesitate to get in touch or connect with me through:</p>
+       <ol>
+         <li><a href="https://www.linkedin.com/in/christopher-francis/" target="_blank">LinkedIn</a></li>
+         <li><a href="https://github.com/christopher442/" target="_blank">Github</a></li>
+         <li><a href="mailto:christopher442@hotmail.com">Email</a></li>
+       </ol>
+     </div>
+   </article>
+ </main>
+ <!--End of main-->
+
+   <!-- Footer section with copyright information -->
+
+ <footer>
+   <p>&copy; Christopher Francis</p>
+ </footer>
+ <!--End of footer-->
 </body>
+
 </html>
