--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
        <h2>Contact Christopher</h2>
        <h3>I'd be delighted to connect with you! Please don't hesitate to get in touch or connect with me through:</h3>
        <ol>
-         <li><a href="https://discordapp.com/users/chrisof779/" target="_blank">Discord</a></li>
+         <li><a href="https://www.linkedin.com/in/chrisf77" target="_blank">LinkedIn</a></li>
          <li><a href="https://github.com/christopher442/" target="_blank">Github</a></li>
-         <li><a href="mailto:christopher442@hotmail.com">Email</a></li>
+         <li><a href="mailto:christopherf442@hotmail.com">Email</a></li>
        </ol>
      </div>
    </article>
